# baha-wellness-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  BAHA_Project_PRD_v2.md  Dockerfile  README.md  components.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.ts  tsconfig.json
Baha_Data/: .env.example  .env.production.example  .gitignore  Dockerfile.full  README.md  docker-compose.buddy-demo.yml  docker-compose.yml  pyproject.toml
Baha_Data/deploy/k8s/: acquisition-cronjobs.yaml  api-deployment.yaml  ingestion-cronjob.yaml
Baha_Data/docs/: ACCOUNT_ONBOARDING_SYSTEM.md  AGE_9_12_CONTENT_DELIVERY_BLUEPRINT.md  APP_FLOW_ARCHITECTURE.md  BACKEND_HANDOFF_FOR_FLUTTER.md  BUDDY_DEMO_CORPUS_SHORTLIST.md  BUDDY_DEMO_QUESTION_BANK.md  BUDDY_DEMO_RAG_SETUP.md  DAILY_CHECKIN_ANALYTICS_LOGIC.html  DAILY_CHECKIN_ANALYTICS_LOGIC.md  DAILY_CHECKIN_ANALYTICS_SUMMARY.md  DATABASE_SETUP_AND_DEPLOYMENT.md  DATA_ACQUISITION.md  ENVIRONMENT_AND_SECRETS.md  FLUTTER_BACKEND_DELIVERY_PLAN.md  HOSTING_COST_AND_SCALE.md  JOURNAL_AND_PROGRESS_UX.md  LOCAL_BUDDY_LLM_ARCHITECTURE.md  MOBILE_API_SURFACES.md  PRESENTATION_DECK_REFRESH_GUIDE.md  PRESENTATION_PITCH_BRIEF.md  PRODUCT_DATA_ARCHITECTURE.md  SCHEMA_IMPLEMENTATION_PLAN.md  SCREEN_API_MATRIX.md  STORY_WORLD_AND_GAMES_PLAN.md  STUDENT_CHECKIN_PROFILE_LOGIC.md  STUDENT_DEMO_SCENARIOS.md  STUDENT_LEARNING_CONTENT_STRATEGY.md  Solomon_Semi_Done_Backend.md  UI_BACKEND_INTEGRATION_PLAN.md
Baha_Data/migrations/: 001_init.sql  004_corpus_expansion.sql  005_priority_acquisition.sql  006_aha_nimhans_campaign.sql  010_required_condition_profiles.sql  011_tier3_embeddings.sql  012_rebuild_vector_indexes.sql  014_product_content_core.sql  015_identity_and_consent_core.sql  016_student_wellness_core.sql  017_learning_and_chat_runtime.sql  018_support_and_safeguarding_core.sql  019_app_read_models.sql  020_demo_seed_data.sql  021_auth_onboarding_and_approvals.sql  022_mobile_ui_alignment_seed.sql  023_student_content_polish_seed.sql  024_student_theme_learning_seed.sql  025_game_runtime.sql  025_story_world_runtime.sql  026_student_adaptive_checkins.sql  027_student_demo_scenarios.sql  028_age_9_12_learning_lanes.sql  029_multi_cohort_learning_refresh.sql  030_dashboard_showcase_seed.sql  031_student_linking_and_learning_depth.sql  032_fix_guardian_demo_password.sql  Dockerfile
Baha_Data/scripts/: import_solomon_rag_demo_corpus.sh  start_local_mobile_stack.sh  stop_local_mobile_stack.sh
Baha_Data/src/baha_rag/: app.py  auth.py  cli.py  config.py  gameplay.py  identity.py  privacy.py  schemas.py  story_engine.py  story_world.py  taxonomy.py
Baha_Data/src/baha_rag/acquisition/: coverage.py  gap_closure.py  life_skills_campaign.py  manual_ingestion.py  metadata.py  pipelines.py  priority_sources.py  review_queue.py  source_registry.py  storage.py  update_detection.py
Baha_Data/src/baha_rag/acquisition/research/: europe_pmc.py  semantic_scholar.py
Baha_Data/src/baha_rag/api/: routes.py
Baha_Data/src/baha_rag/db/: auth_repository.py  game_repository.py  mobile_repository.py
Baha_Data/src/baha_rag/embeddings/: bge.py  indexer.py
Baha_Data/src/baha_rag/generation/: __init__.py  buddy.py  composer.py
Baha_Data/src/baha_rag/ingestion/: pipeline.py  sources.py
Baha_Data/src/baha_rag/retrieval/: bm25.py  hybrid.py
Baha_Data/storage/reports/: buddy-demo-corpus-shortlist.json  buddy-demo-question-bank.json  embedding-smoke-report.json  life-skills-coverage-report.json  retrieval-quality-preflight.json  tier3-topic-coverage-report.json
Baha_Data/supabase/migrations/: 20260624131500_onboarding_account_creation.sql
Baha_Data/tests/: test_auth_identity_bridge.py  test_buddy_chat_service.py  test_gameplay.py  test_mobile_contracts.py  test_retrieval.py  test_sources.py  test_story_world.py
(+1007 files in other folders)
