[project]
name = "baha-wellness-rag"
version = "0.1.0"
description = "Evidence-bound RAG knowledge platform for the BAHA Wellness Companion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "aiohttp>=3.9.5",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "itemadapter>=0.9.0",
  "numpy>=1.26.0",
  "openai>=1.40.0",
  "passlib[bcrypt]>=1.7.4",
  "pgvector>=0.3.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.1",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "scrapy>=2.11.2",
  "sentence-transformers>=3.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "trafilatura>=1.9.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
baha-rag = "baha_rag.cli:main"
baha-companion-knowledge = "baha_companion.knowledge.cli:main"
baha-companion-embeddings = "baha_companion.embeddings.cli:main"
baha-companion-retrieval = "baha_companion.retrieval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baha_rag", "src/baha_companion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
