[project]
name = "baha-wellness-rag"
version = "0.1.0"
description = "Evidence-bound RAG knowledge platform for the BAHA Wellness Companion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.5",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.111.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "itemadapter>=0.9.0",
  "numpy>=1.26.0",
  "pgvector>=0.3.2",
  "PyJWT[crypto]>=2.9.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "scrapy>=2.11.2",
  "sentence-transformers>=3.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "trafilatura>=1.9.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[project.scripts]
baha-rag = "baha_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baha_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
